# celo-blockchain

./: .bulldozer.yml  .codecov.yml  .dockerignore  .gitignore  .golangci.yml  .mergify.yml  .travis.yml  Cargo.toml  CeloBlockchain.podspec  Dockerfile  Dockerfile.alltools  Dockerfile.android  Dockerfile.androidbuild  Dockerfile.arm64  Dockerfile.binaries  Dockerfile.celo-node  Dockerfile.debian-build  Dockerfile.fullnode  Dockerfile.kubeboot  Dockerfile.mimalloc  Dockerfile.multiversion  Dockerfile.mycelo  Dockerfile.retesteth  Makefile  README.celo.md  README.md  SECURITY.md  alfa.json  appveyor.yml  blame.txt  build_arm64_macos.sh  checkMessageChanges.diff  check_merge_conflicts  cloudbuild-android.yaml  cloudbuild-binaries.yaml  cloudbuild-branchname.yaml  cloudbuild-multiversion-nightly.yaml  cloudbuild.yaml  cov.out  disclosures.md  (+28 more)
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  fork.yaml  pull_request_template.md  renovate.json
abe/: abe.go  abe_test.go  send_texts.go
accounts/: accounts.go  accounts_test.go  hd.go  hd_test.go  manager.go  url_test.go
common/: abi.go  big.go  custom_lru.go  debug.go  exchange.go  types.go
consensus/: consensus.go  errors.go  protocol.go
console/: bridge.go  bridge_test.go  console.go  console_test.go
contract_comm/: bridge.go  caller.go  error.go  evm.go  singleton_evm.go  types.go  vm_context.go
contracts/: backend.go  cache_backend.go  caller.go  context.go  contract_call.go  errors.go  evm.go  precompiled.go  registry.go  system_evm.go  tobin_tax.go  utils.go  vm_context.go
core/: bench_test.go  block_context.go  block_receipt.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  blocks.go  bloom_indexer.go  bytesblock.go  caching_state_processor_test.go  celo_multi_gaspool.go  celo_multi_gaspool_test.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  currency.go  dao_test.go  error.go  events.go  evm.go  gasprice_minimum.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_alloc.go  genesis_extradata.go  genesis_test.go  headerchain.go  headerchain_test.go  ievmh.go  mkalloc.go  predeploys.go  random.go  registeredAddresses.go  (+17 more)
crates/bls-crypto/: Cargo.toml
crates/bls-crypto/benches/: cofactor.rs
crates/bls-crypto/examples/: pop_csv.rs
crates/bls-crypto/src/: lib.rs
crates/bls-crypto/src/bls/: cache.rs  ffi.rs  keys.rs  public.rs  signature.rs
crates/bls-crypto/src/curve/: mod.rs
crates/bls-crypto/src/curve/hash/: mod.rs
crates/bls-crypto/src/hash/: composite.rs
crates/bls-crypto/src/hashers/: composite.rs
crypto/: celo_crypto.go  crypto.go  crypto_test.go  signature_cgo.go  signature_test.go
crypto/bls/bls-zexe/bls/algebra/: Cargo.toml
crypto/bls/bls-zexe/bls/algebra/benches/: cofactor.rs
crypto/bls/bls-zexe/bls/algebra/examples/: pop.rs  pop_csv.rs  simple_signature.rs
crypto/bls/bls-zexe/bls/algebra/src/: lib.rs
crypto/bls/bls-zexe/bls/algebra/src/curve/: mod.rs
crypto/bls/bls-zexe/bls/algebra/src/curve/hash/: mod.rs  try_and_increment.rs
crypto/bls/bls-zexe/bls/algebra/src/hash/: direct.rs  mod.rs
crypto/bls/bls-zexe/bls/algebra/test_utils/: test_vec.csv
crypto/bls/bls-zexe/crates/bls-gadgets/: Cargo.toml
crypto/bls/bls-zexe/crates/bls-gadgets/src/: bitmap.rs  bls.rs  hash_to_group.rs  lib.rs  smaller_than.rs  y_to_bit.rs
crypto/bls/bls-zexe/crates/epoch-snark/: Cargo.toml
crypto/bls/bls-zexe/crates/epoch-snark/examples/: constraints.rs  proof.rs
crypto/bls/bls-zexe/crates/epoch-snark/src/: epoch_block.rs  lib.rs
crypto/bls/bls-zexe/crates/epoch-snark/src/api/: mod.rs  prover.rs  setup.rs  verifier.rs
crypto/bls/bls-zexe/crates/epoch-snark/src/api/ffi/: utils.rs
crypto/bls/bls-zexe/crates/epoch-snark/src/gadgets/: epoch_data.rs  epochs.rs  hash_to_bits.rs  mod.rs  pack.rs  proof_of_compression.rs  single_update.rs  slice_update.rs
crypto/bls/bls-zexe/crates/epoch-snark/tests/: e2e.rs  fixtures.rs
dashboard/: dashboard.go
docs/: Gemfile  README.md  _config.yml  downloads.html  index.html  params.json
e2e_test/: api_test.go  e2e_bench_test.go  e2e_test.go  e2e_transfer_test.go
eth/: api.go  api_backend.go  api_test.go  api_tracer.go  backend.go  backend_apis.go  backend_apis_mobile.go  backend_test.go  bloombits.go  celo_state_accessor.go  config.go  discovery.go  gen_config.go  handler.go  handler_eth.go  handler_eth_test.go  handler_snap.go  handler_test.go  helper_test.go  metrics.go  peer.go  peerset.go  protocol.go  protocol_test.go  state_accessor.go  sync.go  sync_test.go
ethclient/: ethclient.go  ethclient_test.go  signer.go  testutils.go
ethersjs-api-check/: package.json  tsconfig.json
ethstats/: ethstats.go  ethstats_test.go
event/: example_feed_test.go  example_scope_test.go  example_subscription_test.go  subscription.go
gcloud/: backup.sh
go/: bls.go  bls_android.go  bls_arm.go  bls_arm64.go  bls_arm7.go  bls_darwin64.go  bls_ios.go  bls_linux.go  bls_linux386.go  bls_linux64.go  bls_mips64.go  bls_mips64le.go  bls_mipsle.go  bls_windows.go
graphql/: graphql.go  graphql_test.go  schema.go  service.go
lala/: history
les/: api.go  api_backend.go  api_test.go  backend.go  balance.go  balance_test.go  benchmark.go  bloombits.go  client.go  client_handler.go  clientpool.go  clientpool_test.go  commons.go  costtracker.go  (+34 more)
(+1649 files in other folders)
