[workspace]

members = [ 
    "crates/bls-crypto", 
    "crates/bls-gadgets",
    "crates/epoch-snark",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

# build all our deps in release mode 
[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false


[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true