[package]
name = "bls-zexe"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@celo.org>"]
edition = "2018"

[dependencies]
algebra = { path = "../../zexe/algebra" }
crypto-primitives = { path = "../../zexe/crypto-primitives" }
bench-utils = { path = "../../zexe/bench-utils" }
rand = { version = "0.7" }
byteorder = "1.3.1"
hex = "0.3.2"
clap = "2.33.0"
log = "0.4.6"
env_logger = "0.6.1"
blake2s_simd = "0.5.8"
csv = "1.1"
lazy_static = "1.3.0"
rand_chacha = "0.2.1"

[dev-dependencies]
criterion = "0.2"
rand_xorshift = { version = "0.2" }

[[bench]]
name = "cofactor"
harness = false

[[example]]
name = "simple_signature"
path = "examples/simple_signature.rs"

[[example]]
name = "pop"
path = "examples/pop.rs"

[[example]]
name = "pop_csv"
path = "examples/pop_csv.rs"

[lib]
crate-type = ["lib", "staticlib"]
