[package]
name = "bls-gadgets"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
bls-crypto = { path = "../bls-crypto" }

algebra = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_377", "sw6", "edwards_sw6", "edwards_bls12", "parallel"] }
r1cs-core = { git = "https://github.com/scipr-lab/zexe", default-features = false }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_377", "edwards_sw6", "parallel"] }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["parallel"] }

# used only when exporting our test helpers to be used in the snark crate
rand_xorshift = { version = "0.2", optional = true }
rand = { version = "0.7" , optional = true }
tracing = "0.1.13"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
rand = { version = "0.7" }
groth16 = { git = "https://github.com/scipr-lab/zexe" }

[features]
test-helpers = ["rand", "rand_xorshift"]
